# XLPS2-Alpha

./: .gitignore  .mcp.json  CODEBUDDY.md  README.md
src/cfw/: CMakeLists.txt  README.md
src/cfw/include/: cfw.h
src/cfw/include/app/: app_states.h  task_fsm.h
src/cfw/include/common/: cfw_config.h  cfw_errors.h  cfw_types.h
src/cfw/include/hal/: hal.h  hal_comm.h  hal_encoder.h  hal_laser.h  hal_motor.h  hal_storage.h
src/cfw/include/hsm/: hsm_current_state.h  hsm_engine.h  hsm_states.h
src/cfw/include/ota/: ota_local.h
src/cfw/include/svc/: diag.h  event_bus.h  filter.h  kinematics.h  param.h  ringbuf.h
src/cfw/include/sys/: system.h
src/cfw/ldscripts/: STM32H743IITx_FLASH.ld
src/cfw/src/app/: app_states.c  task_fsm.c
src/cfw/src/common/: cfw_config.c
src/cfw/src/hsm/: hsm_current_state.c  hsm_engine.c  hsm_states.c
src/cfw/src/ota/: ota_local.c
src/cfw/src/svc/: diag.c  event_bus.c  filter.c  kinematics.c  param.c  ringbuf.c
src/cfw/src/sys/: main.c  startup_stm32h743xx.c  system.c  tasks.c
src/cfw/tests/: cfw_test.h  run_tests.sh  test_current_state.c  test_event_bus.c  test_fault.c  test_filter.c  test_hsm.c  test_param.c  validate_py.py
src/cfw/tools/: toolchain.cmake
src/ota/: .coverage  .gitignore  README.md  pyproject.toml
src/ota/.pytest-tmp-13461/test_get_blob_without_key0/: 100.meta.json
src/ota/.pytest-tmp-13461/test_get_verifies_signature0/: 100.meta.json
src/ota/.pytest-tmp-13461/test_monotonic_enforced0/: 100.meta.json  101.meta.json
src/ota/.pytest-tmp-13461/test_publish_and_query0/: 100.meta.json
src/ota/.pytest-tmp-13461/test_versions_sorted0/: 100.meta.json  200.meta.json  300.meta.json
src/ota/.pytest-tmp-17797/test_get_blob_without_key0/: 100.meta.json
src/ota/.pytest-tmp-17797/test_get_verifies_signature0/: 100.meta.json
src/ota/.pytest-tmp-17797/test_monotonic_enforced0/: 100.meta.json  101.meta.json
src/ota/.pytest-tmp-17797/test_publish_and_query0/: 100.meta.json
src/ota/.pytest-tmp-17797/test_versions_sorted0/: 100.meta.json  200.meta.json  300.meta.json
src/ota/.pytest-tmp-18019/test_get_blob_without_key0/: 100.meta.json
src/ota/.pytest-tmp-18019/test_get_verifies_signature0/: 100.meta.json
src/ota/.pytest-tmp-18019/test_monotonic_enforced0/: 100.meta.json  101.meta.json
src/ota/.pytest-tmp-18019/test_publish_and_query0/: 100.meta.json
src/ota/.pytest-tmp-18019/test_versions_sorted0/: 100.meta.json  200.meta.json  300.meta.json
src/ota/.pytest-tmp-22762/test_get_blob_without_key0/: 100.meta.json
src/ota/.pytest-tmp-22762/test_get_verifies_signature0/: 100.meta.json
src/ota/.pytest-tmp-22762/test_load_from_file0/: k.hex
src/ota/.pytest-tmp-22762/test_monotonic_enforced0/: 100.meta.json  101.meta.json
src/ota/.pytest-tmp-22762/test_publish_and_query0/: 100.meta.json
src/ota/.pytest-tmp-22762/test_versions_sorted0/: 100.meta.json  200.meta.json  300.meta.json
src/ota/.pytest-tmp-32303/test_get_blob_without_key0/: 100.meta.json
src/ota/broker/: README.md  emqx.conf  ota_key.hex
src/ota/ota/: __init__.py  ab_orchestrator.py  chunking.py  config.py  crypto.py  exceptions.py  flag.py  flash.py  framing.py  health_monitor.py  keys.py  mqtt_adapter.py  mqtt_client.py  schema.py  service.py  store.py  topics.py  versioning.py
src/ota/scripts/: build_firmware.py  serve.py
src/ota/store/: README.md
src/ota/tests/: conftest.py  test_ab_orchestrator.py  test_chunking.py  test_flag.py  test_flash.py  test_framing.py  test_health_monitor.py  test_keys.py  test_mqtt_adapter.py  test_mqtt_client.py  test_schema.py  test_service.py  test_store.py  test_versioning.py
(+129 files in other folders)
