[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xlps2-ota"
version = "0.1.0"
description = "XLPS2-Alpha 云端 OTA 服务（Python + EMQX，A/B 双分区，版本单调，健康确认与回滚）"
requires-python = ">=3.10"
dependencies = ["paho-mqtt>=1.6"]
authors = [{ name = "XLPS2 Alpha Team" }]
license = { text = "Proprietary" }

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
xlps2-ota-serve = "ota.scripts.serve:main"
xlps2-ota-build = "ota.scripts.build_firmware:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ota*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
